# arbol

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
arbol/: __init__.py  arbol.py
arbol/demo/: demo.py
arbol/test/: test_arbol.py  test_log.py
arbol/tests/: test_arbol.py
